package es.upm.etsisi.poo;

public class Cliente extends Usuario{

    public Cliente (String id, String nombre, String correo,String CashId){
        super(id,nombre,correo);

    }
}
